--- a/WebInvManagement/Pages/index.cshtml
+++ b/WebInvManagement/Pages/index.cshtml
@@ -1,34 +1,13 @@
 @page
-@namespace WebInvManagement.Pages
-@model IndexModel
+@model LoginModel
 @{
-    ViewData["Title"] = "Home";
-    Layout = "_Layout";
+    ViewData["Title"] = "Login";
+    Layout = "_Layout"; // Specify the layout file to use
 }
 
-<h1 class="mb-3">@ViewData["Title"]</h1>
+<h1>Login</h1>
 
-<div class="container m-auto h-auto">
-    <div class="row">
-        <div class="col-md-4 mb-3">
-            <a href="/AddPhysicalProduct" class="btn btn-primary btn-block">Add Physical Product</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/AddDigitalProduct" class="btn btn-primary btn-block">Add Digital Product</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/ViewInventory" class="btn btn-primary btn-block">View Inventory</a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 mb-3">
-            <a href="/EditProduct" class="btn btn-primary btn-block">Edit Product</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/DeleteProduct" class="btn btn-primary btn-block">Delete Product</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="/FindProduct" class="btn btn-primary btn-block">Delete Product</a>
-        </div>
-    </div>
-</div>
+<form method="post">
+    @Html.AntiForgeryToken()
+    <button type="submit" class="btn btn-primary">Login with Google</button>
+</form>
