--- a/WebInvManagement/Pages/_Layout.cshtml
+++ b/WebInvManagement/Pages/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <!-- You can add navigation links, dropdowns, etc. here -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="/dashboard">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
